--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -51,10 +51,10 @@ monit_services:
       - "if cpu usage (wait) > 20%  for 8 cycles then alert"
 monit_mailserver_host: localhost
 monit_mailserver_port: 25
-monit_alert_address: selvaram@indix.com
+monit_alert_address: naween@indix.com
 monit_alert_mail_format:
   from: devops@indix.com
-  reply-to: selvaram@indix.com
+  reply-to: naween@indix.com
   subject: Monit - Process crashed
   message: |+
     $EVENT Service $SERVICE
