Updating the roles path in the ansibl-galaxy install command

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_install:
 install:
   # Install Ansible.
   - if [ "$ANSIBLE_VERSION" = "latest" ]; then pip install --no-binary ansible ansible; else pip install --no-binary ansible ansible==$ANSIBLE_VERSION; fi
-  - ansible-galaxy install indix.postfix
+  - ansible-galaxy install indix.postfix -p ../
 
 script:
   # Check the role/playbook's syntax.
