--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,8 @@ before_install:
 install:
   # Install Ansible.
   - if [ "$ANSIBLE_VERSION" = "latest" ]; then pip install --no-binary ansible ansible; else pip install --no-binary ansible ansible==$ANSIBLE_VERSION; fi
-  - ansible-galaxy install indix.postfix -p ../
+  - echo -e '[defaults]\nroles_path = ../ > ansible.cfg
+  - ansible-galaxy install indix.postfix
 
 script:
   # Check the role/playbook's syntax.
