--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -18,7 +18,7 @@ monit_postfix_inet_interfaces: all
 monit_postfix_debconf_selections:
  - name: postfix
    question: postfix/main_mailer_type
-   value: No configuration
+   value: 'No configuration'
    vtype: select
 
 ## Monit setup
@@ -55,7 +55,7 @@ monit_alert_address: naween@indix.com
 monit_alert_mail_format:
   from: devops@indix.com
   reply-to: naween@indix.com
-  subject: Monit - Process crashed
+  subject: 'Monit - Process crashed'
   message: |+
     $EVENT Service $SERVICE
                Date:        $DATE
