--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -41,5 +41,5 @@
     dest: "{{monit_includes}}/{{item.name}}"
     owner: "root"
     group: "root"
-  with_items: "monit_services"
+  with_items: "{{ monit_services }}"
   notify: Restart monit
